fixed particle background clipping in mobile view

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,3 +29,8 @@ div {
 div::-webkit-scrollbar {
    display: none; /* for Chrome, Safari, and Opera */
 }
+
+#tsparticles{
+   width: 100vw;
+   height: 100vh;
+}
